syntax = "proto3";

package openai_service;

service openai_service {
  rpc openai_method (MyRequest) returns (MyResponse) {}
}

message MyRequest {
  string input = 1;
}

message MyResponse {
  string output = 1;
}